# Vse2

./: CMakeLists.txt
lab4-master/: laba4.sln
lab4-master/Debug/: laba4.ilk
lab4-master/laba4/: Task1.c  laba4.vcxproj  prim.c
lab5-master/: Laba5.sln
lab5-master/Debug/: Laba5.ilk
lab5-master/Laba5/: Laba5.vcxproj  Task1.c
lab5-master/Laba5/Debug/: vc141.idb
lab5-master/Laba5/Debug/Laba5.tlog/: CL.read.1.tlog  CL.write.1.tlog  Laba5.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab6-master/: laba6.sln
lab6-master/Debug/: laba6.ilk
lab6-master/laba6/: laba6.vcxproj  task1.c
lab6-master/laba6/Debug/: vc141.idb  vc142.idb
lab6-master/laba6/Debug/laba6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  laba6.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
laba1-master/: Lab1.sln
laba1-master/Lab1/Task4/: task4.c
laba1-master/Task8_lib.lib/: Task8_lib.lib.sln
laba1-master/Task8_lib.lib/Task8_lib.lib/: Task8_lib.lib.vcxproj  Task8_lib.lib.vcxproj.filters
laba1-master/Task8_lib.lib/Task8_lib.lib/Debug/: Task8_lib.lib.idb  Task8_lib.lib.pch
laba1-master/Task8_lib.lib/Task8_lib.lib/Debug/Task8_lib.lib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Task8_lib.lib.lastbuildstate
laba2-master/Debug/: Laba2.ilk
laba3-master/: Laba 3.sln
laba3-master/Debug/: Laba 3.ilk
