# CMakeList.txt: проект CMake для Task1; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_subdirectory ("laba1-master")
add_subdirectory ("laba2-master")
add_subdirectory ("laba3-master")
add_subdirectory ("lab4-master")
add_subdirectory ("lab5-master")
add_subdirectory ("lab6-master")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
